Updating editorconfig.