@@ -51,6 +51,8 @@ allOpen {
 
 extra["snippetsDir"] = file("build/generated-snippets")
 
+val ktlint by configurations.creating
+
 dependencies {
 	implementation("io.dereknelson.lostcities-cloud:lostcities-common:1.0-SNAPSHOT")
 	implementation("io.dereknelson.lostcities-cloud:lostcities-models:1.0-SNAPSHOT")
@@ -100,7 +102,12 @@ dependencies {
 
 	annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
-	//testImplementation("org.mockito:mockito-core:3.+")
+	ktlint("com.pinterest:ktlint:0.44.0") {
+		attributes {
+			attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+		}
+	}
+
 	testImplementation("org.junit.jupiter:junit-jupiter:5.6.2")
 	testImplementation("org.junit.jupiter:junit-jupiter-engine:5.6.2")
 	testImplementation("org.mockito:mockito-junit-jupiter:2.23.0")
@@ -115,6 +122,29 @@ tasks.bootRun {
 	if (project.hasProperty("debug_jvm")) {
 		jvmArgs("-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005")
 	}
+}
+
+val outputDir = "${project.buildDir}/reports/ktlint/"
+val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
+
+val ktlintCheck by tasks.creating(JavaExec::class) {
+	inputs.files(inputFiles)
+	outputs.dir(outputDir)
+
+	description = "Check Kotlin code style."
+	classpath = ktlint
+	mainClass.set("com.pinterest.ktlint.Main")
+	args = listOf("src/**/*.kt")
+}
+
+val ktlintFormat by tasks.creating(JavaExec::class) {
+	inputs.files(inputFiles)
+	outputs.dir(outputDir)
+	description = "Fix Kotlin code style deviations."
+	classpath = ktlint
+	mainClass.set("com.pinterest.ktlint.Main")
+	args = listOf("-F", "src/**/*.kt")
+	jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 tasks.withType<KotlinCompile> {
